updates to page

--- a/EditTest2/EditTest2Page.xaml
+++ b/EditTest2/EditTest2Page.xaml
@@ -1,4 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:EditTest2" x:Class="EditTest2.EditTest2Page">
-	<Label Text="Welcome to Xamarin Forms!" VerticalOptions="Center" HorizontalOptions="Center" />
+<?xml version="1.0" encoding="utf-8"?>
+<ContentPage 
+	xmlns="http://xamarin.com/schemas/2014/forms" 
+	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+	xmlns:local="clr-namespace:EditTest2" 
+	x:Class="EditTest2.EditTest2Page"
+	xmlns:numeric="clr-namespace:Syncfusion.SfNumericTextBox.XForms;assembly=Syncfusion.SfNumericTextBox.XForms"
+	>
+	<StackLayout Orientation="Vertical">
+		<Label Text="Welcome to Xamarin Forms!" VerticalOptions="Center" HorizontalOptions="Center" />
+		<numeric:SfNumericTextBox Value="1234" />	
+	</StackLayout>
 </ContentPage>
